...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/nazivET"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/naziv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/nazivET"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nazivET"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/medicinskoUpozorenje"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/porodicaET" />

        <EditText
            android:id="@+id/jeloET"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/nazivET"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/jelo"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilOkusaLV" />

        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:choiceMode="multipleChoice"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicinskoUpozorenjeET" />

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:choiceMode="multipleChoice"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicinskaKoristLV" />


        <!--<ListView
            android:id="@+id/jelaLV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/klimatskiTipLV"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:choiceMode="singleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zemljisniTipLV" />-->

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/zemljisniTipLV"
...
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jeloET" />

        <Button
            android:id="@+id/dodajJeloBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:text="Dodaj jelo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jelaLV"
            app:layout_constraintTop_toBottomOf="@+id/jeloET" />

        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:text="Dodaj biljku"
...
            android:src="@drawable/biljka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jelaLV" />

        <TextView
            android:id="@+id/labelMedicinskaKorist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/medicinskaKoristGreska"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicinskaKoristLV"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/labelKlimatskiTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/klimatskiTipGreska"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klimatskiTipLV"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/labelZemljisniTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/zemljisniTipGreska"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zemljisniTipLV"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/labelProfilOkusa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/profilOkusaGreska"
            app:layout_constraintStart_toStartOf="parent"
...
